feat(stage): add Get + PATCH endpoints with Swagger annotations
